--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2"
