--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
+    "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-color": "^2.18.0",
     "react-dom": "^16.12.0",
