--- a/package.json
+++ b/package.json
@@ -16,38 +16,38 @@
   "author": "J.Kuklok, T. Neuhaus, M.Kuhmichel",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.13.1",
-    "prop-types": "^15.7.2",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.2"
+    "@babel/core": "~7.8.4",
+    "@babel/preset-env": "~7.8.4",
+    "@babel/preset-react": "~7.8.3",
+    "babel-loader": "~8.0.6",
+    "css-loader": "~3.4.2",
+    "eslint": "~6.8.0",
+    "html-loader": "~0.5.5",
+    "html-webpack-plugin": "~3.2.0",
+    "node-sass": "~4.13.1",
+    "prop-types": "~15.7.2",
+    "sass-loader": "~8.0.2",
+    "style-loader": "~1.1.3",
+    "webpack": "~4.41.5",
+    "webpack-cli": "~3.3.10",
+    "webpack-dev-server": "~3.10.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "bootstrap": "^4.4.1",
-    "react": "^16.12.0",
-    "react-ace": "^8.0.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-color": "^2.18.0",
-    "react-dom": "^16.12.0",
-    "react-dropzone": "^10.2.1",
+    "@fortawesome/fontawesome-free": "~5.12.0",
+    "@fortawesome/fontawesome-svg-core": "~1.2.26",
+    "@fortawesome/free-solid-svg-icons": "~5.12.0",
+    "@fortawesome/react-fontawesome": "~0.1.8",
+    "bootstrap": "~4.4.1",
+    "react": "~16.12.0",
+    "react-ace": "~8.0.0",
+    "react-bootstrap": "~1.0.0-beta.16",
+    "react-color": "~2.18.0",
+    "react-dom": "~16.12.0",
+    "react-dropzone": "~10.2.1",
     "react-redux": "7.1.3",
-    "react-router-dom": "^5.1.2",
-    "redux": "4.0.5",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "react-router-dom": "~5.1.2",
+    "redux": "~4.0.5",
+    "redux-logger": "~3.0.6",
+    "redux-thunk": "~2.3.0"
   }
 }
