--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "style-loader": "~1.1.3",
     "webpack": "~4.41.5",
     "webpack-cli": "~3.3.10",
-    "webpack-dev-server": "~3.10.2"
+    "webpack-dev-server": "~3.10.2",
+    "lodash": "^4.17.15"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "~5.12.0",
