--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux": "~4.0.5",
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
+    "redux-persist": "~6.0.0",
     "redux-thunk": "~2.3.0"
   }
 }
