--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dropzone": "~10.2.1",
     "react-redux": "7.1.3",
     "react-router-dom": "~5.1.2",
+    "react-show-more-text": "^1.3.0",
     "redux": "~4.0.5",
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
