--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
     "bootstrap": "~4.4.1",
+    "codemirror": "^5.52.0",
     "immer": "^5.3.6",
     "react": "~16.12.0",
     "react-ace": "~8.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
+    "react-codemirror": "^1.0.0",
     "react-color": "~2.18.0",
     "react-dom": "~16.12.0",
     "react-dropzone": "~10.2.1",
