Updating package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "J.Kuklok, T. Neuhaus, M.Kuhmichel",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "~7.8.4",
     "@babel/preset-env": "~7.8.4",
@@ -31,7 +31,7 @@
     "webpack": "~4.41.5",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "~3.10.2",
-    "lodash": "^4.17.15"
+    "lodash": "~4.17.15"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "~5.12.0",
@@ -39,18 +39,18 @@
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
     "bootstrap": "~4.4.1",
-    "codemirror": "^5.52.0",
-    "immer": "^5.3.6",
+    "codemirror": "~5.52.0",
+    "immer": "~5.3.6",
     "react": "~16.12.0",
     "react-ace": "~8.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror": "~1.0.0",
     "react-color": "~2.18.0",
     "react-dom": "~16.12.0",
     "react-dropzone": "~10.2.1",
     "react-redux": "7.1.3",
     "react-router-dom": "~5.1.2",
-    "react-show-more-text": "^1.3.0",
+    "react-show-more-text": "~1.3.0",
     "redux": "~4.0.5",
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
