--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "babel-loader": "~8.0.6",
     "css-loader": "~3.4.2",
     "eslint": "~6.8.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.0.0",
     "html-loader": "~0.5.5",
     "html-webpack-plugin": "~3.2.0",
+    "lodash": "~4.17.15",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "~4.13.1",
     "prop-types": "~15.7.2",
     "sass-loader": "~8.0.2",
     "style-loader": "~1.1.3",
     "webpack": "~4.41.5",
     "webpack-cli": "~3.3.10",
-    "webpack-dev-server": "~3.10.2",
-    "lodash": "~4.17.15"
+    "webpack-dev-server": "~3.10.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "~5.12.0",
