--- a/package.json
+++ b/package.json
@@ -13,7 +13,21 @@
     "url": "https://github.com/TeamTableFlip/tagflip-gui.git"
   },
   "keywords": [],
-  "author": "J.Kuklok, T. Neuhaus, M.Kuhmichel",
+  "contributors": [
+    {
+      "name": "Jakub Kuklok"
+    },
+    {
+      "name": "Timo Neuhaus"
+    },
+    {
+      "name": "Max Kuhmichel"
+    },
+    {
+      "name": "Christian Gawron",
+      "email": "gawron.christian@fh-swf.de"
+    }
+  ],
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "~7.8.4",
