--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "webpack-dev-server": "~3.10.2"
   },
   "dependencies": {
+    "@codemirror/next": "^0.7.1",
     "@fortawesome/fontawesome-free": "~5.12.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
     "bootstrap": "~4.4.1",
-    "codemirror": "~5.52.0",
     "immer": "~5.3.6",
     "react": "~16.12.0",
     "react-ace": "~8.0.0",
