--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "~7.8.4",
-    "@babel/preset-env": "~7.8.4",
-    "@babel/preset-react": "~7.8.3",
-    "babel-loader": "~8.0.6",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@types/lodash": "^4.14.155",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux-persist": "^4.3.1",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "~3.4.2",
     "eslint": "~6.8.0",
     "extract-loader": "^5.1.0",
@@ -42,13 +48,16 @@
     "html-webpack-plugin": "~3.2.0",
     "lodash": "~4.17.15",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "~4.13.1",
+    "node-sass": "^4.14.1",
     "prop-types": "~15.7.2",
     "sass-loader": "~8.0.2",
+    "source-map-loader": "^1.0.0",
     "style-loader": "~1.1.3",
-    "webpack": "~4.41.5",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
+    "webpack": "^4.41.6",
     "webpack-cli": "~3.3.10",
-    "webpack-dev-server": "~3.10.2"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@codemirror/next": "^0.7.1",
