--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
     "bootstrap": "~4.4.1",
+    "dotenv": "^8.2.0",
     "immer": "~5.3.6",
     "react": "~16.12.0",
     "react-ace": "~8.0.0",
