--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "~0.5.5",
     "html-webpack-plugin": "~3.2.0",
-    "lodash": "~4.17.15",
+    "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "prop-types": "~15.7.2",
@@ -82,6 +82,7 @@
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
     "redux-persist": "~6.0.0",
-    "redux-thunk": "~2.3.0"
+    "redux-thunk": "~2.3.0",
+    "typesafe-actions": "^5.1.0"
   }
 }
