fix: Correct github repo link in package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TeamTableFlip/tagflip-gui.git"
+    "url": "https://github.com/fhswf/tagflip-gui.git"
   },
   "keywords": [],
   "contributors": [
