--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "@codemirror/next": "^0.7.1",
     "@fortawesome/fontawesome-free": "~5.12.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
@@ -75,6 +76,8 @@
     "bootstrap": "~4.4.1",
     "dotenv": "^8.2.0",
     "immer": "~5.3.6",
+    "install": "^0.13.0",
+    "npm": "^6.14.7",
     "react": "~16.12.0",
     "react-ace": "~8.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
