--- a/package.json
+++ b/package.json
@@ -31,15 +31,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "semantic-release": "^17.1.1",
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
     "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -58,17 +57,18 @@
     "node-sass": "^4.14.1",
     "prop-types": "~15.7.2",
     "sass-loader": "~8.0.2",
+    "semantic-release": "^17.1.1",
     "source-map-loader": "^1.0.0",
     "style-loader": "~1.1.3",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
+    "typescript": "^4.0.1-rc",
     "webpack": "^4.41.6",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
-    "@codemirror/next": "^0.7.1",
+    "@codemirror/next": "^0.10.0",
     "@fortawesome/fontawesome-free": "~5.12.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
@@ -76,7 +76,6 @@
     "bootstrap": "~4.4.1",
     "dotenv": "^8.2.0",
     "immer": "~5.3.6",
-    "install": "^0.13.0",
     "npm": "^6.14.7",
     "react": "~16.13.1",
     "react-ace": "~8.0.0",
@@ -86,7 +85,7 @@
     "react-dom": "~16.13.1",
     "react-dropzone": "~10.2.1",
     "react-redux": "7.1.3",
-    "react-router-dom": "~5.1.2",
+    "react-router-dom": "~5.2.0",
     "react-show-more-text": "~1.3.0",
     "redux": "~4.0.5",
     "redux-immer": "^1.0.4",
