--- a/package.json
+++ b/package.json
@@ -31,15 +31,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "semantic-release": "^17.1.1",
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
     "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -58,10 +57,12 @@
     "node-sass": "^4.14.1",
     "prop-types": "~15.7.2",
     "sass-loader": "~8.0.2",
+    "semantic-release": "^17.1.1",
     "source-map-loader": "^1.0.0",
     "style-loader": "~1.1.3",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
+    "typescript-rest-swagger": "^1.1.4",
     "webpack": "^4.41.6",
     "webpack-cli": "~3.3.10",
     "webpack-dev-server": "^3.11.0"
@@ -73,6 +74,7 @@
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
+    "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "~4.4.1",
     "dotenv": "^8.2.0",
     "immer": "~5.3.6",
@@ -88,11 +90,15 @@
     "react-redux": "7.1.3",
     "react-router-dom": "~5.1.2",
     "react-show-more-text": "~1.3.0",
+    "react-toastify": "^6.0.8",
     "redux": "~4.0.5",
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
+    "redux-observable": "^1.2.0",
     "redux-persist": "~6.0.0",
     "redux-thunk": "~2.3.0",
+    "rxjs": "^6.6.2",
+    "tagflip-common": "file:../tagflip-common",
     "typesafe-actions": "^5.1.0"
   }
 }
