--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@codemirror/next": "^0.10.0",
+    "@fhswf/tagflip-common": "^1.0.0",
     "@fortawesome/fontawesome-free": "~5.12.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
@@ -97,7 +98,6 @@
     "redux-persist": "~6.0.0",
     "redux-thunk": "~2.3.0",
     "rxjs": "^6.6.2",
-    "tagflip-common": "file:../tagflip-common",
     "typesafe-actions": "^5.1.0"
   }
 }
