--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-@fhswf:registry=https://npm.pkg.github.com/fhswf
+@fhswf:registry=https://npm.pkg.github.com/
 # read-only token for fhswf
 //npm.pkg.github.com/:_authToken=19839619200d71bd6e4df2defbb8433d8a905d56
 # ${NODE_AUTH_TOKEN}
