chore: fix build on github

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+#//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
 
 @fhswf:registry=https://npm.pkg.github.com/
 # read-only token for fhswf 
