--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
           node-version: 12.x
 
       - name: Install
-        run: npm config set '//npm.pkg.github.com/:_authToken=' "${{ secrets.NPM_RW }}" && npm config set '@fhswf:registry=https://npm.pkg.github.com/' && npm ci
+        run: npm config set '//npm.pkg.github.com/:_authToken=' "${{ secrets.NPM_RW }}" && npm config set '@fhswf:registry=https://npm.pkg.github.com/fhswf' && npm ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_RW }}
 
