--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tagflip-gui",
+  "name": "@fhswf/tagflip-gui",
   "version": "1.1.4",
   "description": "A web based tool for annotating documents.",
   "main": "index.js",
