--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tagflip-gui",
-  "version": "1.1.5",
+  "version": "1.1.4",
   "description": "A web based tool for annotating documents.",
   "main": "index.js",
   "private": true,
@@ -41,6 +41,7 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.38",
+    "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux-persist": "^4.3.1",
@@ -70,7 +71,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@codemirror/next": "^0.10.0",
-    "@fhswf/tagflip-common": "^1.0.1",
+    "@fhswf/tagflip-common": "^1.0.0",
     "@fortawesome/fontawesome-free": "~5.12.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
@@ -83,6 +84,10 @@
     "react": "~16.13.1",
     "react-ace": "~8.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-codemirror": "~1.0.0",
     "react-color": "~2.18.0",
     "react-dom": "~16.13.1",
