--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/redux-persist": "^4.3.1",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "~3.4.2",
     "eslint": "~6.8.0",
     "extract-loader": "^5.1.0",
@@ -71,11 +72,12 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@codemirror/next": "^0.10.0",
-    "@fhswf/tagflip-common": "^1.1.1",
-    "@fortawesome/fontawesome-free": "~5.12.0",
+    "@fhswf/tagflip-common": "file://../tagflip-common",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
+    "@hookform/error-message": "0.0.4",
     "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "~4.4.1",
     "dotenv": "^8.2.0",
@@ -83,20 +85,26 @@
     "npm": "^6.14.7",
     "react": "~16.13.1",
     "react-ace": "~8.0.0",
+    "react-albus": "^2.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-bootstrap-typeahead": "^5.1.1",
     "react-codemirror": "~1.0.0",
     "react-color": "~2.18.0",
     "react-dom": "~16.13.1",
     "react-dropzone": "~10.2.1",
+    "react-hook-form": "^6.6.0",
+    "react-pro-sidebar": "^0.4.4",
     "react-redux": "7.1.3",
     "react-router-dom": "~5.2.0",
     "react-show-more-text": "~1.3.0",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^6.0.8",
     "redux": "~4.0.5",
+    "redux-connect-decorator": "^0.2.1",
     "redux-immer": "^1.0.4",
     "redux-logger": "~3.0.6",
     "redux-observable": "^1.2.0",
