--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.7",
     "@semantic-release/release-notes-generator": "^9.0.1",
+    "@types/chroma-js": "^2.0.0",
     "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.38",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-select": "^3.0.20",
     "@types/redux-persist": "^4.3.1",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
@@ -72,20 +75,23 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "@codemirror/next": "^0.10.0",
-    "@fhswf/tagflip-common": "file://../tagflip-common",
+    "@fhswf/tagflip-common": "^2.0.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "~1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "~5.12.0",
     "@fortawesome/react-fontawesome": "~0.1.8",
     "@hookform/error-message": "0.0.4",
     "@reduxjs/toolkit": "^1.4.0",
     "bootstrap": "~4.4.1",
+    "chroma-js": "^2.1.0",
     "dotenv": "^8.2.0",
     "immer": "~5.3.6",
     "npm": "^6.14.7",
     "react": "~16.13.1",
     "react-ace": "~8.0.0",
     "react-albus": "^2.0.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "~1.0.0-beta.16",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
@@ -100,6 +106,7 @@
     "react-pro-sidebar": "^0.4.4",
     "react-redux": "7.1.3",
     "react-router-dom": "~5.2.0",
+    "react-select": "^3.1.0",
     "react-show-more-text": "~1.3.0",
     "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^6.0.8",
